common/common.scss
.directory {
  .filter-name {
    float: none;
  }

  .filters {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;

    > span {
      margin-bottom: 5px;
    }
  }

  .group-filter:not(.active) .select-kit-header {
    color: $primary-high;
  }
}

.user-card-directory {
  display: grid;

  grid-template-columns: 1fr;

  @media only screen and (min-width: 500px) {
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
  }

  .user-card-container{
    margin: 60px 20px;
  }

  @supports (display: grid) {
    display: grid;
    
    .user-card-container{
      margin: 0;
    }
  }
  
  grid-gap: 60px 20px;
  margin-top: 60px;

  .user-card {
    z-index: z("base");
    position: relative;
    width: 100%;
    box-shadow: none;
    margin: 0;

    .badge-section {
      overflow: hidden;
    }
  }

  .usercard-controls {
    display: none;
  }

  .user-card-container {
    width: 100%;
    
    background-color: $secondary;
    box-shadow: shadow("card");
    margin-bottom: auto;
  }

  .user-card-directory-footer {
    background-color: $secondary;
    padding: 0px 10px 10px 10px;
    display: flex;
    flex-wrap: wrap;

    .stat {
      flex-basis: 0;
      flex-grow: 1;

      display: flex;
      flex-direction: column;
      align-items: center;
      margin: 2px;

      .label {
        font-size: $font-down-2;

        .d-icon {
          margin-right: 0.2em;
          color: $primary-medium;
        }
      }
    }
  }
}

